# notinghill

./: .gitignore  README.md  gitignore  run_dev.ps1  run_dev.sh
backend/: config.py  main.py  requirements.txt
backend/app/api/: routes_dashboard.py  routes_duplicates.py  routes_images.py  routes_indexing.py  routes_search.py  routes_settings.py  routes_timeline.py
backend/app/core/: file_classifier.py  job_queue.py  time_utils.py
backend/app/db/: connection.py  repo_content.py  repo_duplicates.py  repo_items.py  repo_jobs.py  repo_search.py  repo_timeline.py  schema.sql  schema1.sql
backend/app/services/: dedup_service.py  indexing_service.py  llm_service.py  nl2sql_service.py  search_service.py
backend/app/services/extractors/: base.py  docx_extractor.py  image_extractor.py  mp3_extractor.py  pdf_extractor.py  text_extractor.py  xlsx_extractor.py
backend/app/services/lsh/: lsh_index.py
backend/profiling/: profile_dedup.py  profile_pipeline.py
backend/static/: index.html
backend/static/assets/: index-Dh14tJ_W.css  index-yX-ya-0Y.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: Layout.tsx  (+1 more)
frontend/src/i18n/: translations.ts
frontend/src/pages/: Dashboard.tsx  Duplicates.tsx  Images.tsx  Indexing.tsx  Multimedia.tsx  Search.tsx  Settings.tsx  Timeline.tsx
frontend/src/store/: index.ts
frontend/src/utils/: helpers.ts
rust_ext/: BUILD.md  Cargo.toml  pyproject.toml
rust_ext/src/: lib.rs
(+5 files in other folders)
