[package]
name        = "notinghill_ext"
version     = "0.1.0"
edition     = "2021"
description = "NotingHill — Rust extension (PyO3) for compute-heavy operations"

[lib]
name    = "notinghill_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
sha2 = "0.10"
rayon = "1.10"

[profile.release]
opt-level = 3
lto        = true
codegen-units = 1
strip      = "symbols"
