[build-system]
requires      = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name    = "notinghill-ext"
version = "0.1.0"
requires-python = ">=3.10"
description = "Rust extension for NotingHill — SHA256, pHash DCT, SimHash, Hamming batch"

[tool.maturin]
module-name     = "notinghill_ext"
python-source   = "."
features        = ["pyo3/extension-module"]
